feat(fix): Отладка тестов